// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders correctly 1`] = `
Object {
  "Options": Object {
    "ID": "component",
    "dataSaving": false,
    "directives": Object {
      "EventListener": [Function],
      "UpdateOnEvent": [Function],
      "disabled": [Function],
      "onChangeUpdate": [Function],
      "onInputUpdate": [Function],
      "onclick": [Function],
      "oninput": [Function],
      "onload": [Function],
      "onresize": [Function],
      "onscroll": [Function],
      "onselect": [Function],
      "onsubmit": [Function],
      "ref": [Function],
    },
    "errors": Array [],
    "formClass": "form",
    "getErrors": [Function],
    "submit": [Function],
    "submitText": "",
    "success": [Function],
  },
  "html": "
<form class=\\"form\\">
  <!--0-->
  <!--0-->
  <!--1-->
  <!--2-->
  <button type=\\"submit\\">
    <!--3-->
    <!--4-->
  </button>
  <!--5-->
</form>
",
}
`;

exports[`submit fail 1`] = `
Object {
  "Options": Object {
    "ID": "component",
    "dataSaving": false,
    "directives": Object {
      "EventListener": [Function],
      "UpdateOnEvent": [Function],
      "disabled": [Function],
      "onChangeUpdate": [Function],
      "onInputUpdate": [Function],
      "onclick": [Function],
      "oninput": [Function],
      "onload": [Function],
      "onresize": [Function],
      "onscroll": [Function],
      "onselect": [Function],
      "onsubmit": [Function],
      "ref": [Function],
    },
    "errors": Array [],
    "formClass": "form",
    "getErrors": [Function],
    "submit": [MockFunction] {
      "calls": Array [
        Array [],
      ],
      "results": Array [
        Object {
          "isThrow": false,
          "value": Promise {},
        },
      ],
    },
    "submitText": "",
    "success": [Function],
  },
  "html": "
<form class=\\"form\\">
  <!--0-->
  <!--0-->
  <!--1-->
  <!--2-->
  <button type=\\"submit\\">
    <!--3-->
    <!--4-->
  </button>
  <!--5-->
</form>
",
}
`;
